discussion/kv_engine/171024/171024_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Drop keys from the pager

Epehemral could be better, we need to call dropKey not pageOut, or at least
use the core of dropKey to kick the dropped data out

Maybe split this into persistent and epehmeral patches

Change-Id: I953d0ee41da11de25e7464723f13d2832e8cf0c8

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-02-18 12:50:20.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-18 13:08:45.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15690/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ephemeral_vb.cc:128:40: error: use of undeclared identifier "cid" [clang-diagnostic-error]
        doCollectionsStats(readHandle, cid, notifyCtx);
                                       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15690/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ephemeral_vb.cc:128:40:
error: use of undeclared identifier "cid" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15690/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44039/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/ephemeral_vb.cc(128): error C2065: "cid": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44039/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37117/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/ephemeral_vb.cc:128:40:
error: use of undeclared identifier "cid"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37117/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5341/ : FAILURE

Compile error at [2022-02-18T12:52:15.119Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/ephemeral_vb.cc:128:40:
error: use of undeclared identifier "cid"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5341/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18482/ : FAILURE

Compile error at [2022-02-18T12:51:45.462Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master@2/kv_engine/engines/ep/src/ephemeral_vb.cc:128:40:
error: use of undeclared identifier "cid"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18482/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17446/ : FAILURE

Compile error at [2022-02-18T12:52:30.512Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/ephemeral_vb.cc:128:40:
error: ?cid? was not declared in this scope; did you mean ?id??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17446/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16508/ : FAILURE

Compile error at [2022-02-18T12:53:09.660Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/ephemeral_vb.cc:128:40:
error: use of undeclared identifier "cid"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16508/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25849/ : FAILURE

Compile error at [2022-02-18T13:07:13.660Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/ephemeral_vb.cc:128:40:
error: use of undeclared identifier "cid"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25849/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5401/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17768/ : FAILURE

Compile error at [2022-02-18T12:52:23.427Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master@2/kv_engine/engines/ep/src/ephemeral_vb.cc:128:40:
error: ?cid? was not declared in this scope; did you mean ?id??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17768/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14537/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2022-02-21 12:45:08.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
